<resources>
    <string name="app_name">Movies Catalogue</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">01-01-1970</string>
    <string name="release_date_label">Release Date</string>
    <string name="synopsis_label">Synopsis</string>
    <string name="synopsis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi felis metus, mattis quis lacus at, tempor facilisis mauris. Quisque non dignissim tortor. Curabitur orci lectus, fringilla nec dapibus eu, eleifend quis felis. Vivamus mauris turpis, ultricies et ipsum et, posuere pulvinar libero. Duis sed leo sit amet magna auctor ornare sagittis dapibus neque. Nulla in ornare tortor. Donec iaculis sollicitudin diam at facilisis. Integer in nibh eros. Vestibulum venenatis sem mauris, eu porttitor dolor malesuada eu. Sed in diam ipsum.</string>
    <string name="duration_label">Duration</string>
    <string name="duration">120 min</string>
    <string name="genre_label">Genre</string>
    <string name="genre">Thriller</string>

    <string-array name="movie_title">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>BumbleBee</item>
        <item>Creed II</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball The Movie: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
    </string-array>

    <string-array name="release_date">
        <item>19-10-2018</item>
        <item>12-12-2018</item>
        <item>25-04-2018</item>
        <item>21-12-2018</item>
        <item>31-10-2018</item>
        <item>19-12-2018</item>
        <item>28-11-2018</item>
        <item>09-01-2019</item>
        <item>20-02-2019</item>
        <item>16-01-2019</item>
        <item>24-10-2018</item>
        <item>25-12-2018</item>
    </string-array>

    <string-array name="duration">
        <item>2h 6min</item>
        <item>2h 23min</item>
        <item>2h 29min</item>
        <item>2h 4min</item>
        <item>2h 14min</item>
        <item>1h 54min</item>
        <item>2h 10min</item>
        <item>1h 44min</item>
        <item>1h 40min</item>
        <item>2h 9min</item>
        <item>2h 2min</item>
        <item>2h 10min</item>
    </string-array>

    <string-array name="genre">
        <item>Drama</item>
        <item>Action</item>
        <item>Action</item>
        <item>Drama</item>
        <item>Biography</item>
        <item>Action</item>
        <item>Drama</item>
        <item>Animation</item>
        <item>Animation</item>
        <item>Thriller</item>
        <item>Thriller</item>
        <item>Comedy</item>
    </string-array>

    <string-array name="synopsis">
        <item>Seasoned musician Jackson Maine (Bradley Cooper) discovers-and falls in love with-struggling artist Ally (Gaga). She has just about given up on her dream to make it big as a singer - until Jack coaxes her into the spotlight. But even as Ally career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Arthur Curry, half human half from Atlantis, goes on a trip of a lifetime. Not only does this adventure compel him to come to terms with his real identity, but it also forces him to discover whether he is entirely worthy of fulfilling his own destiny: becoming a king.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment, the fate of Earth and existence has never been more uncertain.</item>
        <item>In the wake of an unknown global terror, a mother must find the strength to flee with her children down a treacherous river in search of safety. Due to unseen deadly forces, the perilous journey must be made blindly. Directed by Emmy winner Susanne Bier, Bird Box is a thriller starring Academy Award winner Sandra Bullock, John Malkovich, Sarah Paulson, and Trevante Rhodes.</item>
        <item>Bohemian Rhapsody is a foot-stomping celebration of Queen, their music and their extraordinary lead singer Freddie Mercury. Freddie defied stereotypes and shattered convention to become one of the most beloved entertainers on the planet. The film traces the meteoric rise of the band through their iconic songs and revolutionary sound. They reach unparalleled success, but in an unexpected turn Freddie, surrounded by darker influences, shuns Queen in pursuit of his solo career.</item>
        <item>On Cybertron, the Autobots, led by Optimus Prime, are on the verge of losing the Great Cybertronian War to their enemies, the Decepticons, and begin making preparations to leave the planet. The Decepticons led by Shockwave, Soundwave and Starscream ambush them during the evacuation, and Optimus sends a young scout, B-127, to Earth in order to set up a base of operations where the Autobots can regroup.</item>
        <item>Years after Adonis Creed made a name for himself under Rocky Balboa mentorship, the young boxer becomes the Heavyweight Champion of the World. While life is good with that victory and his marriage to Bianca, trouble comes to Philadelphia when Ivan Drago, the Russian boxer who killed Adonis father, Apollo, arrives with his son, Viktor, to challenge Adonis. Against Rockys advice, Adonis accepts the challenge without his mentors participation and pays the price in a punishing bout he wins only by a technicality.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Goku and Vegeta encounter Broly, a Saiyan warrior unlike any fighter they have faced before.</item>
        <item>After pursuing Kevin Wendell Crumb and the multiple identities that reside within. David Dunn finds himself locked in a mental hospital alongside his archenemy, Elijah Price and must contend with a psychiatrist who is out to prove the trio do not actually possess superhuman abilities.</item>
        <item>A U.S. submarine, the USS Tampa Bay, vanishes while shadowing a Russian Akula-class submarine in the Arctic. Rear Admiral John Fisk sends a Virginia-class submarine, the USS Arkansas, under the command of newly-promoted and unorthodox Commander Joe Glass to investigate. At the same time, a Navy SEAL team under the command of Lieutenant Bill Beaman is sent in to discreetly observe a Russian naval base.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
    </string-array>

    <string-array name="poster">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
    </string-array>
</resources>
