<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:id="@+id/img_photo"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/movie_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView
        android:id="@+id/tv_release_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_photo"
        android:layout_below="@id/tv_title"
        android:text="@string/release_date_label"
        android:layout_marginTop="4dp"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_release_date"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/tv_release_date_label"
        android:layout_below="@id/tv_title"
        android:text="@string/release_date"
        android:layout_marginTop="4dp"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_synopsis_label"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/synopsis_label"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_below="@id/tv_release_date_label"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_photo"
        android:layout_below="@id/tv_synopsis_label"
        android:text="@string/synopsis"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:maxLines="3"
        android:ellipsize="end"/>

</RelativeLayout>